Add landing page main elements

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 /* Reusable variable declaration*/
 :root {
-   /* 
+  /* 
   Example:
   --main-color: red;
   */
@@ -20,8 +20,55 @@
 
 /* Reusable variable declaration*/
 :root {
-   /* 
+  /* 
   Example:
   --main-color: red;
   */
 }
+
+/* Ephraim's css start */
+
+#main_user_interaction {
+  box-sizing: border-box;
+}
+
+#main_user_interaction {
+  display: flex;
+  height: 100vh;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.main_text_box {
+  display: flex;
+  padding: 5px;
+}
+
+.main_text_box_username,
+.main_text_box_password {
+  border-radius: 50px;
+}
+
+input {
+  border-color: black;
+  border-style: solid;
+}
+
+label {
+  width: 100px;
+  font-family: Pixelify Sans;
+}
+
+#main_sign_in_button {
+  padding: 5px;
+}
+
+#main_sign_in_button button {
+  border-radius: 50px;
+  font-family: Pixelify Sans;
+  border-style: solid;
+  border-color: black;
+}
+
+/* Ephraim's css end */
