--- a/styles/style.css
+++ b/styles/style.css
@@ -35,11 +35,10 @@
 #main_user_interaction {
    display: flex;
    height: 80vh;
-   width: 100vw;
+   /* width: 100vw; */
    flex-direction: column;
    justify-content: center;
    align-items: center;
-
 }
 
 .main_logo {
@@ -61,7 +60,6 @@
    justify-content: flex-start;
    height: 50%;
 }
-
 
 .main_text_box1,
 .main_text_box2,
@@ -107,10 +105,11 @@ label {
    border-top: 2px black solid;
    display: flex;
    align-items: center;
-   justify-content: flex-start;
-   padding-left: 20px;
+   /* justify-content: flex-start; */
+   justify-content: space-evenly;
+   /* padding-left: 20px; */
    color: white;
-   gap: 20px;
+   /* gap: 20px; */
    /* Creates spacing between the elements */
 }
 
@@ -121,8 +120,6 @@ label {
    gap: 20px;
    /* Provides spacing between the items */
 }
-
-
 
 #footer a {
    text-decoration: none;
@@ -136,19 +133,15 @@ label {
    /* Adds a smooth transition on hover */
 }
 
-
-
 #footer {
-
-   justify-content: space-between;
-   padding-right: 30px;
+   /* justify-content: space-between; */
    /* Adjust this value to push icons more to the right */
 }
 
 .footer-icons {
    display: flex;
    align-items: center;
-   gap: 50px;
+   gap: 10px;
    /* Increase this value to add more space between icons */
 }
 
@@ -161,7 +154,5 @@ label {
 .footer-icons a:hover {
    color: #ddd;
 }
-
-
 
 /* Sebastian's css End */
