--- a/styles/imageconfirmation.css
+++ b/styles/imageconfirmation.css
@@ -43,14 +43,26 @@
     font-weight: bold;
 }
 
-.home-screen-button {
+.upload-buttons {
     padding: 30px 120px;
     background-color: lightgray;
 }
 
-#home-screen-button3,
-#home-screen-button4 {
-    padding: 30px 85px;
+#upload-button {
+    padding: 30px 80px;
+}
+
+#take-photo-button {
+    padding: 30px 87px;
+}
+
+#image-preview {
+    width: 275px;
+    height: 275px;
+    background-color: lightgray;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .main_logo {
@@ -71,13 +83,6 @@
     flex-direction: column;
     justify-content: flex-start;
     height: 50%;
-}
-
-.main_text_box1,
-.main_text_box2,
-.main_text_box3 {
-    display: flex;
-    padding: 5px;
 }
 
 .main_text_box_search,
