--- a/styles/style.css
+++ b/styles/style.css
@@ -45,7 +45,7 @@
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
-   height: 40%;
+   /* height: 40%; */
 }
 
 .main_teetotee {
@@ -58,7 +58,8 @@
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
-   height: 50%;
+   /* height: 50%; */
+   max-height: fit-content;
 }
 
 .main_text_box1,
