--- a/styles/header_and_footer.css
+++ b/styles/header_and_footer.css
@@ -7,6 +7,15 @@
     justify-content: space-between;
 }
 
+#navbar_right {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: Pixelify Sans;
+    font-size: 2rem;
+    text-align: center;
+}
+
 #footer {
     background-color: grey;
     height: 10vh;
