--- a/styles/header_and_footer.css
+++ b/styles/header_and_footer.css
@@ -16,6 +16,16 @@
     text-align: center;
 }
 
+#navbar_left {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#compost_id {
+    font-size: 4rem;
+}
+
 #footer {
     background-color: grey;
     height: 10vh;
