--- a/styles/profile.css
+++ b/styles/profile.css
@@ -1,23 +1,23 @@
-#main-container {
+#main_container {
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
 }
 
-#profile-name {
+#profile_name {
     background-color: gray;
     width: 250px;
     height: 50px;
 }
 
-#profile-address {
+#profile_address {
     background-color: gray;
     width: 250px;
     height: 50px;
 }
 
-.profile-favourite-locations {
+.profile_favourite_locations {
     background-color: brown;
     width: 250px;
     height: 50px;
