--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,9 @@
 #main_container {
     display: flex;
     flex-direction: column;
-    background-color: beige;
+    background-color: white;
+    background-size: cover;
+    background-position: center;
     justify-content: center;
     align-items: center;
     height: 80vh;
