--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,7 @@
+html {
+    font-family: Pixelify Sans;
+}
+
 #main_container {
     display: flex;
     flex-direction: column;
@@ -6,19 +10,29 @@
     background-position: center;
     justify-content: center;
     align-items: center;
-    height: 80vh;
+    height: 82vh;
+}
+
+#greeting_text {
+    text-align: center;
+    margin-bottom: 30px;
+    border-bottom: 1px solid #187753;
 }
 
 /* CSS for buttons */
 #buttons {
     display: flex;
     flex-wrap: wrap;
-    gap: 20px;
+    gap: 30px;
     justify-content: center;
     align-items: center;
 }
 
 .main_button {
-    min-width: 40vw;
-    min-height: 15vh;
+    min-width: 80vw;
+    min-height: 12vh;
+    border: 1px solid #187753;
+    border-radius: 10px;
+    background-color: white;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
