--- a/styles/style.css
+++ b/styles/style.css
@@ -32,8 +32,14 @@ html {
 .main_button {
     min-width: 80vw;
     min-height: 12vh;
-    border: 1px solid #187753;
     border-radius: 10px;
+    border: none;
     background-color: white;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    color: white;
+    background-color: #187753;
+    font-size: 1.2rem;
 }
