--- a/styles/other_resources.css
+++ b/styles/other_resources.css
@@ -1,27 +1,24 @@
-#external_resources {
-    display: flex;
-    flex-direction: column;
-    min-height: 80vh;
-    justify-content: space-around;
+#main_container {
+    justify-content: space-evenly;
 }
 
 .resource {
     display: flex;
-    min-width: 80vw;
-    justify-content: space-evenly;
-}
-
-a {
-    display: flex;
     align-items: center;
-    text-decoration: none;
-}
-
-.resource button {
-    width: 30vw;
-    max-height: 25vh;
+    justify-content: space-evenly;
+    max-width: 80vw;
+    min-height: 15vh;
+    border-radius: 10px;
+    border: none;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    align-items: center;
+    color: white;
+    background-color: #187753;
+    font-size: 1.2rem;
+    gap: 15px;
 }
 
 .resource img {
-    width: 30vw;
+    width: 20vw;
+    margin-left: 15px;
 }
