--- a/styles/depot_locations.css
+++ b/styles/depot_locations.css
@@ -1,12 +1,33 @@
-#depot_buttons {
+/* #depot_buttons {
     display: flex;
     flex-wrap: wrap;
     gap: 20px;
     justify-content: center;
     align-items: center;
-}
+} */
 
-a button {
+/* a button {
     width: 40vw;
     min-height: 10vh;
+} */
+
+#greeting_text {
+    margin-bottom: 10px;
+}
+
+#main_container {
+    gap: 5px;
+}
+
+.depot_location_button {
+    text-align: center;
+    width: 80vw;
+    min-height: 6vh;
+    border-radius: 10px;
+    border: none;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    color: white;
+    background-color: #187753;
+    font-size: 1.2rem;
+    text-wrap: wrap;
 }
