--- a/styles/display_material_information.css
+++ b/styles/display_material_information.css
@@ -2,47 +2,55 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    min-height: 35vh;
-    min-width: 100%;
+    min-height: 25vh;
+    width: 100%;
 }
 
 .material_image {
-    min-width: 44vw;
-    margin: 3vw;
-    text-align: center;
-    background-color: lightgray;
+    width: 40vw;
+    height: 20vh;
+    border-radius: 10px;
+    border: 1px solid #187753;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    margin-left: 20px;
 }
 
 .material_specifications {
+    margin-right: 20px;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
-    min-width: 44vw;
-    min-height: 100%;
-    margin: 0 3vw;
+    width: 40vw;
+    height: 100%;
 }
 
-.insert_category,
 .insert_name,
-.insert_type {
-    background-color: lightgray;
+.insert_type,
+.insert_boolean {
+    border: 1px solid #187753;
+    border-radius: 10px;
+    padding: 3px 6px;
 }
 
 .depot_information {
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
-    min-height: 45vh;
-    min-width: 100%;
+    min-height: 20vh;
+    margin-left: 20px;
+    margin-right: 20px;
 }
 
 .material_description {
-    margin: 0 3vw;
-    background-color: lightgray;
+    border: 1px solid #187753;
+    border-radius: 10px;
+    padding: 3px 6px;
+    margin-top: 3px;
 }
 
 .depot_location {
-    margin: 0 3vw;
-    background-color: lightgray;
+    border: 1px solid #187753;
+    border-radius: 10px;
+    padding: 3px 6px;
+    margin-top: 3px;
 }
-
