--- a/styles/style.css
+++ b/styles/style.css
@@ -11,7 +11,7 @@ html {
     justify-content: center;
     align-items: center;
     height: 82vh;
-    overflow: auto;
+    overflow: scroll;
 }
 
 #greeting_text {
