--- a/styles/depot_display.css
+++ b/styles/depot_display.css
@@ -3,7 +3,12 @@
     flex-direction: column;
     justify-content: space-evenly;
     gap: 20px;
-    min-height: 60vh;
+    min-height: 20vh;
+}
+
+#map {
+    width: 80vw;
+    height: 20vh;
 }
 
 .favorite-button {
