--- a/styles/display_material_information.css
+++ b/styles/display_material_information.css
@@ -7,13 +7,24 @@
 }
 
 .material_image {
-    width: 40vw;
-    height: 20vh;
+    width: 40vw; /* Adjust the width as needed */
+    height: 20vh; /* Adjust the height as needed */
     border-radius: 10px;
     border: 1px solid #187753;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     margin-left: 20px;
+    overflow: hidden; /* This ensures that the image does not overflow its container */
+    display: flex;
+    align-items: center; /* Centers the image vertically */
+    justify-content: center; /* Centers the image horizontally */
 }
+
+.material_image img {
+    max-width: 100%; /* Ensures the image width does not exceed the container width */
+    max-height: 100%; /* Ensures the image height does not exceed the container height */
+    object-fit: cover; /* Ensures the image covers the entire container without distortion */
+}
+
 
 .material_specifications {
     margin-right: 20px;
