--- a/styles/depot_display.css
+++ b/styles/depot_display.css
@@ -12,7 +12,8 @@
 }
 
 .favorite-button {
-    border: none;
+    border: 1px solid;
+    border-radius: 15px;
     background-color: transparent;
     cursor: pointer;
     font-size: 24px; /* Adjust the size of the icon */
