Align text and icon in favourite button

--- a/styles/depot_display.css
+++ b/styles/depot_display.css
@@ -12,6 +12,8 @@
 }
 
 .favorite-button {
+    display: flex;
+    align-items: center;
     border: 1px solid;
     border-radius: 15px;
     background-color: transparent;
