--- a/styles/depot_locations.css
+++ b/styles/depot_locations.css
@@ -31,3 +31,28 @@
     font-size: 1.2rem;
     text-wrap: wrap;
 }
+
+/* .main_button {
+    min-width: 80vw;
+    min-height: 12vh;
+    border-radius: 10px;
+    border: none;
+    background-color: white;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    color: white;
+    background-color: #187753;
+    font-size: 1.2rem;
+}
+
+*/
+.depot_location_button:hover {
+    background-color: #55ac85;
+}
+
+.depot_location_button:active {
+    background-color: #55ac85;
+    transform: translateY(5px);
+}
