--- a/styles/profile.css
+++ b/styles/profile.css
@@ -16,6 +16,7 @@
     padding: 3px 6px;
     margin-top: 3px;
 }
+
 #profile_buttons {
     display: flex;
     justify-content: space-evenly;
@@ -31,4 +32,13 @@
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     color: white;
     background-color: #187753;
+}
+
+.profile_button_styles:hover {
+    background-color: #55ac85;
+}
+
+.profile_button_styles:active {
+    background-color: #55ac85;
+    transform: translateY(5px);
 }
