--- a/styles/display_material_information.css
+++ b/styles/display_material_information.css
@@ -1,9 +1,16 @@
+#main_container {
+    padding-top: 125px;
+    padding-bottom: 80px;
+    font-size: 1.3rem;
+}
+
 .general_information {
     display: flex;
     align-items: center;
     justify-content: space-between;
     min-height: 25vh;
     width: 100%;
+    margin-bottom: 70px;
 }
 
 .material_image {
@@ -24,7 +31,6 @@
     max-height: 100%; /* Ensures the image height does not exceed the container height */
     object-fit: cover; /* Ensures the image covers the entire container without distortion */
 }
-
 
 .material_specifications {
     margin-right: 20px;
@@ -64,4 +70,8 @@
     border-radius: 10px;
     padding: 3px 6px;
     margin-top: 3px;
+}
+
+.description {
+    margin-bottom: 20px;
 }
