--- a/styles/profile.css
+++ b/styles/profile.css
@@ -1,7 +1,15 @@
+label {
+    margin-right: 10px;
+}
+
+#profile-info-display {
+    font-size: 1.3rem;
+}
+
 #personalInfoFields {
     display: flex;
     flex-direction: column;
-    gap: 40px;
+    gap: 30px;
     border: none;
 }
 
@@ -14,7 +22,8 @@
     border: 1px solid #187753;
     border-radius: 10px;
     padding: 3px 6px;
-    margin-top: 3px;
+    margin-top: 10px;
+    min-width: 80vw;
 }
 
 #profile_buttons {
@@ -25,8 +34,8 @@
 }
 
 .profile_button_styles {
-    min-width: 20vw;
-    min-height: 4vh;
+    min-width: 30vw;
+    min-height: 5vh;
     border-radius: 8px;
     border: none;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
