load category buttons to remove empty buttons

--- a/styles/material_categories.css
+++ b/styles/material_categories.css
@@ -6,3 +6,7 @@
 .main_button {
     font-size: 1.7rem;
 }
+
+#categoriesContainer .main_button {
+    margin-bottom: 20px; /* Adjust this value for desired spacing */
+}
