--- a/styles/depot_display.css
+++ b/styles/depot_display.css
@@ -1,12 +1,6 @@
-/* #main_container {
-    padding-top: 100px;
-    padding-bottom: 30px;
-}
-*/
-
 #main_container {
-    padding-top: 200px;
-    padding-bottom: 40px;
+    padding-top: 675px;
+    padding-bottom: 20px;
     font-size: 1.2rem;
     justify-content: space-evenly;
     gap: 20px;
@@ -57,18 +51,16 @@
     margin-right: 40px;
 }
 
-
 /* Review Section Styles */
 #review_section {
     width: 90%; /* Increase the width */
-    margin: 0 auto; /* Center align */
     padding: 20px;
-    box-shadow: 0 0 10px rgba(0,0,0,0.1); /* Optional: adds a subtle shadow for depth */
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Optional: adds a subtle shadow for depth */
     background-color: #fff; /* Optional: change background color */
     border-radius: 10px; /* Optional: rounded corners */
     border: 1px solid #187753; /* Adding the border */
     border-radius: 10px; /* Adding rounded corners */
-    margin-bottom: 20px; 
+    margin-bottom: 20px;
 }
 
 #reviews_container {
@@ -82,7 +74,6 @@
 .review {
     margin-bottom: 10px; /* Space between reviews */
 }
-
 
 #review_form {
     margin-top: 20px;
@@ -105,18 +96,17 @@
 }
 
 #review_text {
-    width: 100%; 
-    box-sizing: border-box; 
-    margin: 0; 
-    padding: 10px; 
-    border: 1px solid #ccc; 
+    width: 100%;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 10px;
+    border: 1px solid #ccc;
 }
 /* Submit Review Button Styles */
 #submit_review_button {
-
     box-sizing: border-box;
     margin: 0;
-    min-width: 30vw; 
+    min-width: 30vw;
     min-height: 5vh;
     border-radius: 8px;
     border: none;
@@ -124,7 +114,7 @@
     color: white;
     background-color: #187753;
     cursor: pointer;
-    font-size: 1.2rem; 
+    font-size: 1.2rem;
 }
 
 #submit_review_button:hover {
@@ -135,4 +125,3 @@
     background-color: #55ac85;
     transform: translateY(5px);
 }
-
