--- a/styles/style.css
+++ b/styles/style.css
@@ -43,11 +43,12 @@ html {
     background-color: white;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     color: white;
     background-color: #187753;
     font-size: 1.5rem;
+    padding: 0 7vw;
 }
 
 /* For added feedback impact when interacting with buttons */
