--- a/styles/header_and_footer.css
+++ b/styles/header_and_footer.css
@@ -38,7 +38,7 @@
     height: 8vh;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
     padding-left: 40px;
     padding-right: 40px;
     border-top-right-radius: 10px;
