--- a/styles/header_and_footer.css
+++ b/styles/header_and_footer.css
@@ -20,13 +20,15 @@
     /* font-family: Pixelify Sans; */
     font-size: 1.8rem;
     text-align: center;
-    padding-right: 70px;
+    /* padding-right: 70px; */
+    padding: 0 20px;
 }
 
 #navbar_left {
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 0 20px;
 }
 
 #compost_id {
