--- a/styles/material_categories.css
+++ b/styles/material_categories.css
@@ -1,7 +1,7 @@
-#main_container {
+/* #main_container {
     padding-top: 125px;
     padding-bottom: 20px;
-}
+} */
 
 .main_button {
     font-size: 1.7rem;
