--- a/styles/material_subcategories.css
+++ b/styles/material_subcategories.css
@@ -1,12 +1,19 @@
-#main_container {
+/* #main_container {
     padding-top: 400px;
     padding-bottom: 30px;
-}
+} */
 
 .main_button {
     font-size: 1.7rem;
 }
 
 .subcategory_button {
-    margin-bottom: 20px; /* Adjust this value for desired spacing */
+    /* margin-bottom: 20px; Adjust this value for desired spacing */
+}
+
+#subcategoriesContainer {
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
+    overflow: scroll;
 }
