--- a/styles/profile.css
+++ b/styles/profile.css
@@ -1,7 +1,7 @@
-#main_container {
-    padding-top: 100px;
+/* #main_container {
+    padding-top: 0px;
     padding-bottom: 40px;
-}
+} */
 
 label {
     margin-right: 10px;
