--- a/styles/depot_display.css
+++ b/styles/depot_display.css
@@ -1,17 +1,25 @@
 #main_container {
     display: flex;
-    padding-top: 675px;
-    padding-bottom: 20px;
+    /* padding-top: 0px; */
+    /* padding-bottom: 20px; */
     font-size: 1.2rem;
-    justify-content: space-evenly;
+    /* justify-content: space-evenly; */
+    /* gap: 20px; */
+    /* align-items: flex-start; */
+    /* margin-left: 40px; */
+}
+
+#depot_display_elements {
+    display: flex;
+    flex-direction: column;
+    overflow: scroll;
+    margin-top: 20px;
     gap: 20px;
-    align-items: flex-start;
-    margin-left: 40px;
 }
 
 #map {
-    width: 80vw;
-    height: 20vh;
+    /* width: 80vw; */
+    /* height: 20vh; */
     padding-bottom: 200px;
 }
 
@@ -45,17 +53,17 @@
     border: 1px solid #187753;
     border-radius: 10px;
     padding: 3px 6px;
-    max-width: 80vw;
+    /* max-width: 80vw; */
 }
 
 .favourite_button {
     align-self: center;
-    margin-right: 40px;
+    /* margin-right: 40px; */
 }
 
 /* Review Section Styles */
 #review_section {
-    width: 90%; /* Increase the width */
+    width: 100%; /* Increase the width */
     padding: 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Optional: adds a subtle shadow for depth */
     background-color: #fff; /* Optional: change background color */
