Dynamically load accepted materials of depots

--- a/styles/depot_display.css
+++ b/styles/depot_display.css
@@ -47,7 +47,7 @@
 .location_phone,
 .location_address,
 .location_name,
-.location_website,
+.location_accepted_materials,
 .location_hours,
 .location_notes {
     border: 1px solid #187753;
