--- a/styles/display_material_information.css
+++ b/styles/display_material_information.css
@@ -1,6 +1,6 @@
 #main_container {
-    padding-top: 50px;
-    padding-bottom: 80px;
+    /* padding-top: 50px; */
+    /* padding-bottom: 80px; */
     font-size: 1.3rem;
 }
 
@@ -10,7 +10,7 @@
     justify-content: space-between;
     min-height: 25vh;
     width: 100%;
-    margin-bottom: 70px;
+    /* margin-bottom: 70px; */
 }
 
 .material_image {
@@ -63,10 +63,13 @@
     border-radius: 10px;
     padding: 3px 6px;
     margin-top: 3px;
+    overflow: scroll;
+    max-height: 20vh;
 }
 
 .locations {
     overflow: scroll;
+    padding-bottom: 20px;
 }
 
 .depot_location {
