Set fixed width on depot display elements

--- a/styles/depot_display.css
+++ b/styles/depot_display.css
@@ -15,6 +15,11 @@
     overflow: scroll;
     margin-top: 20px;
     gap: 20px;
+    max-width: 90vw;
+}
+
+.location_name {
+    color: #187753;
 }
 
 #map {
