--- a/styles/display_material_information.css
+++ b/styles/display_material_information.css
@@ -77,6 +77,7 @@
     border-radius: 10px;
     padding: 3px 6px;
     margin-top: 3px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 .description {
