--- a/styles/display_material_information.css
+++ b/styles/display_material_information.css
@@ -68,14 +68,17 @@
 }
 
 .locations {
+    display: flex;
+    flex-direction: column;
     overflow: scroll;
+    gap: 7px;
     padding-bottom: 20px;
 }
 
 .depot_location {
     border: 1px solid #187753;
     border-radius: 10px;
-    padding: 3px 6px;
+    padding: 0 6px;
     margin-top: 3px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
