--- a/styles/profile.css
+++ b/styles/profile.css
@@ -30,6 +30,7 @@ label {
     padding: 3px 6px;
     /* margin-top: 10px; */
     min-width: 80vw;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 #profile_buttons {
