--- a/styles/display_material_information.css
+++ b/styles/display_material_information.css
@@ -1,6 +1,4 @@
 #main_container {
-    /* padding-top: 50px; */
-    /* padding-bottom: 80px; */
     font-size: 1.3rem;
 }
 
@@ -10,26 +8,25 @@
     justify-content: space-between;
     min-height: 25vh;
     width: 100%;
-    /* margin-bottom: 70px; */
 }
 
 .material_image {
-    width: 40vw; /* Adjust the width as needed */
-    height: 20vh; /* Adjust the height as needed */
+    width: 40vw;
+    height: 20vh;
     border-radius: 10px;
     border: 1px solid #187753;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     margin-left: 20px;
-    overflow: hidden; /* This ensures that the image does not overflow its container */
+    overflow: hidden;
     display: flex;
-    align-items: center; /* Centers the image vertically */
-    justify-content: center; /* Centers the image horizontally */
+    align-items: center;
+    justify-content: center;
 }
 
 .material_image img {
-    max-width: 100%; /* Ensures the image width does not exceed the container width */
-    max-height: 100%; /* Ensures the image height does not exceed the container height */
-    object-fit: cover; /* Ensures the image covers the entire container without distortion */
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: cover;
 }
 
 .material_specifications {
