--- a/styles/material_categories.css
+++ b/styles/material_categories.css
@@ -1,12 +1,7 @@
-/* #main_container {
-    padding-top: 125px;
-    padding-bottom: 20px;
-} */
-
 .main_button {
     font-size: 1.7rem;
 }
 
 #categoriesContainer .main_button {
-    margin-bottom: 20px; /* Adjust this value for desired spacing */
+    margin-bottom: 20px;
 }
